fixed: finished all page in this website

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -120,7 +120,11 @@
             width: 100%;
             
         }
-        
+    }
 
-        
+    @media screen and (max-width: 663px){
+        #itemProduct{
+            display: flex;
+            flex-direction: column;
+        }
     }
