--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -131,3 +131,18 @@
     }
 
 
+    
+    .logo{
+        display: none;
+    }
+
+    @media screen and (max-width: 600px)
+        {
+            #logo{
+                display: none;
+            }
+            .logo{
+                display: flex;
+            }
+        }
+
