--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,7 +18,7 @@
 
 @media (max-width: 870px) {
     
-    #logo, #maps, #barrier, #cart, #user {
+    #logo, #maps, #barrier, #user {
         display: none;
     }
     
@@ -63,6 +63,7 @@
 }
 
 @media screen and (max-width: 460px){
+    
     #product{
         width: 7rem;
         height: 11rem;
